--- a/assets/index.html
+++ b/assets/index.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
-<div class="open_button"></div>
-<div class="manage_button"></div>
-<div class="password_button"></div>
+    <div class="buttons">
+        <div class="open_button"></div>
+        <div class="manage_button"></div>
+         <div class="password_button"></div>
+    </div>
+
 </body>
 </html>
