--- a/assets/index.html
+++ b/assets/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="buttons">
-        <div class="open_button"></div>
+        <div class="open_button"> shit! </div>
         <div class="manage_button"></div>
          <div class="password_button"></div>
     </div>
