--- a/assets/index.html
+++ b/assets/index.html
@@ -11,9 +11,17 @@
 
 <body>
     <div class="buttons">
-        <div class="open_button"> shit! </div>
-        <div class="manage_button"></div>
-         <div class="password_button"></div>
+        <div class="open_button">
+            <span>By FaceID</span>
+        </div>
+        
+        <div class="manage_button">
+            <span></span>
+        </div>
+
+        <div class="password_button">
+             <span>By Password</span>
+        </div>
     </div>
 
 </body>
