--- a/assets/index.html
+++ b/assets/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cn">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,19 +10,54 @@
 </head>
 
 <body>
+    <div class="title_box">十大歌手</div>
+    <div class="plus_box">hello</div>
     <div class="buttons">
-        <div class="open_button">
-            <span>By FaceID</span>
-        </div>
-        
-        <div class="manage_button">
-            <span></span>
-        </div>
 
-        <div class="password_button">
-             <span>By Password</span>
-        </div>
+        <div class="team1_button button" id="teamBtn1"></div>
+        <div class="team2_button button" id="teamBtn2"></div>
+        <div class="team3_button button" id="teamBtn3"></div>
+
+        <span class="input input--shoko score_input" id="team1">
+                <input class="input__field input__field--shoko" type="text" id="team1_input">
+
+                <label class="input__label input__label--shoko" for="team1_input">
+                    <span class="input__label-content input__label-content--shoko">Player Name</span>
+                </label>
+
+                <svg class="graphic graphic--shoko" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
+				    <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"></path>
+				    <path d="M0,2.5c0,0,298.666,0,399.333,0C448.336,2.5,513.994,13,597,13c77.327,0,135-10.5,200.999-10.5c95.996,0,402.001,0,402.001,0"></path>
+                </svg>
+
+            </span>
+        <span class="input input--shoko score_input" id="team2">
+                <input class="input__field input__field--shoko" type="text" id="team2_input">
+
+                <label class="input__label input__label--shoko" for="team2_input">
+                    <span class="input__label-content input__label-content--shoko">Player Name</span>
+                </label>
+
+                <svg class="graphic graphic--shoko" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
+				    <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"></path>
+				    <path d="M0,2.5c0,0,298.666,0,399.333,0C448.336,2.5,513.994,13,597,13c77.327,0,135-10.5,200.999-10.5c95.996,0,402.001,0,402.001,0"></path>
+                </svg>
+
+            </span>
+        <span class="input input--shoko score_input" id="team3">
+                <input class="input__field input__field--shoko" type="text" id="team3_input">
+
+                <label class="input__label input__label--shoko" for="team3_input">
+                    <span class="input__label-content input__label-content--shoko">Player Name</span>
+                </label>
+
+                <svg class="graphic graphic--shoko" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
+				    <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"></path>
+				    <path d="M0,2.5c0,0,298.666,0,399.333,0C448.336,2.5,513.994,13,597,13c77.327,0,135-10.5,200.999-10.5c95.996,0,402.001,0,402.001,0"></path>
+                </svg>
+
+            </span>
+
     </div>
-
 </body>
 </html>
