--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <div class="open_button"></div>
-    <div class="manage_button"></div>
-    <div class="password_button"></div>
+    <div class="team1_button"></div>
+    <div class="team2_button"></div>
+    <div class="team3_button"></div>
 </body>
 </html>
